FIX PROJECTILE POSITION

--- a/Game.project.json
+++ b/Game.project.json
@@ -6,6 +6,7 @@
     "$className": "DataModel",
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
+      "$ignoreUnknownInstances": true,
       "$path": "src/ReplicatedStorage"
     },
     "ServerScriptService": {
